@@ -1,3 +1,4 @@
+* Make depends on methods generic to any method
 * Add width/height attribute to notebook
 * Allow to call set_lang with None and language instance
 * Add hostname configuration to list database
